2010-05-27 Thu  Jari Aalto  <jari.aalto@cante.net>

	* bin/perl-depends.pl (Help): Correct load of Pod::Man.

	* Makefile: bin/perl-depends.1: Delete. Generated from *.pl.
	(doc/conversion/index.html): Delete. Unused rule.
	(XARGS, PERL, docdir, manpage): New variables,
	(clean): Use find(1).
	(distclean): Remove generated directories.
	(docdir): New rule.
	(man, html, txt): Rewrite rule.

	* doc/: remove directory tree. Generated by Makefile.

2010-05-01 Sat  Jari Aalto  <jari.aalto@cante.net>

	* bin/perl-depends.pl (HandleCommandLineArgs): Remove
	"require_order" from Getopt::Long::config().

2010-04-15 Thu  Jari Aalto  <jari.aalto@cante.net>

	* bin/perl-depends.pl (Help): rewrite eval Pod::Man call.
	(HandleCommandLineArgs): Correct many of the Perl::Critic remarks.

2010-03-24 Wed  Jari Aalto  <jari.aalto@cante.net>

	* README (README): Add Copyright and License.

	* bin/perl-depends.pl: (POD::DESCRIPTION): Fix typos.
	(POD::OPTIONS): Remove --help-exclude. There is no such option.
	(POD::SEE ALSO): Remove cloc(1), add cpan(1).

2010-03-19 Fri  Jari Aalto  <jari.aalto@cante.net>

	* bin/perl-depends.pl: (HELP::POD): Fix typos.

2010-03-18 Thu  Jari Aalto  <jari.aalto@cante.net>

	* ChangeLog: New file.

	* INSTAL: New file.

	* README: New file.

	* Makefile: New file.

	* bin/perl-depends.pl: New file.